# traffic-project-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  run.sh  test_db_conn.py
.github/workflows/: cicd.yml
core/: dao.py  db.py  env.py  log.py  middleware.py  utils.py
data/: road_condition.txt  road_coordinate.txt
db/: core.py  gantry.py  models.py  road.py  road_condition.py  road_coordinate.py  trunk_ramp.py
lstm/: predict.py  traffic_model.h5
models/: __init__.py  common.py  roads.py
router/: condition.py  error.py  gantry.py  predict.py  ramp.py  response.py  road.py  roads.py  system.py  traffic.py  trunk.py  video.py
schemas/: __init__.py  common.py  composite.py  gantry.py  lstm.py  roads.py  system.py  traffic.py  trunk_ramp.py
scripts/: init_db.py  inspect_xlsx.py  install.sh  run_pg.sh
scripts/data-to-db/: gantry.py  import_new_data.py  import_traffic_concurrent.py  ramp.py  road_condition.py  road_coordinate.py  trunk_road.py
services/: common.py  roads.py  system.py
sql/: init.sql
